syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.annatarhe.athena.proto.version";
option java_outer_classname = "VersionsProto";

package proto;

service Versions {
    rpc GetAll(PlatformRequest) returns (VersionList) {}
    rpc Get(PlatformRequest) returns (VersionList) {}
}

enum PlatformEnum {
    ANDROID = 0;
    IOS = 1;
    WEB = 2;
}

message PlatformRequest {
    repeated PlatformEnum platforms = 13;
}

message VersionItem {
    int32 id = 1001;
    string platform = 1002;
    int32 version = 1003;
    string publishedBy = 1004;
    string link = 1005;
    string description = 1006;
    string title = 1007;
    int64 createdAt = 1008;
    int64 updatedAt = 1009;
}

message VersionList {
    repeated VersionItem versions = 1000;
}
